Multiple entry and output webpack config success for differnt D3 file bundling to ES6 JS

--- a/scatterplot.html
+++ b/scatterplot.html
@@ -9,5 +9,7 @@
 </head>
 <body>
         <h1>Code is coming...</h1>
+
+        <script type="text/javascript" src="dist/scatterPlot.js"></script>
 </body>
 </html>
