Horizontal Bar Chart completion and renaming files

--- a/smiley.html
+++ b/smiley.html
@@ -11,6 +11,6 @@
 <body>
     <svg width="960" height="500"></svg>
 
-    <script type="text/javascript" src="dist/face.js"></script>
+    <script type="text/javascript" src="./dist/smiley.js"></script>
 </body>
 </html>
