--- a/barchart.html
+++ b/barchart.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bar Chart</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+
+    <style>
+
+rect {
+  fill: steelblue
+}
+
+text {
+  font-family: sans-serif;
+}
+
+.tick text {
+  font-size: 2.7em;
+  fill: #635F5D;
+}
+
+.tick line {
+  stroke: #C0C0BB;
+}
+
+.axis-label {
+  font-size: 3em;
+  fill: #8E8883;
+}
+
+.title {
+  font-size: 2.2em;
+  fill: #635F5D;
+}
+    </style>
 </head>
 <body>
+
+    <h2>Horizontal Bar Chart of CSV Data</h2>
+
+    <p>Data pulled from the <a href="https://population.un.org/wpp/Download/Standard/Population/" target="_blank">United Nations: World Population Prospects 2017</a></p>
+
     <svg width="960" height="500"></svg>
     
     <script type="text/javascript" src="dist/barChart.js"></script>
