--- a/scatterplot.html
+++ b/scatterplot.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Scatter Plot</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
         <h1>Code is coming...</h1>
 
-        <script type="text/javascript" src="dist/scatterPlot.js"></script>
+        <script type="text/javascript" src="./dist/scatterPlot.js"></script>
 </body>
 </html>
