Start of Scatter Plot

--- a/scatterplot.html
+++ b/scatterplot.html
@@ -7,8 +7,9 @@
     <title>Scatter Plot</title>
 </head>
 <body>
-        <h1>Code is coming...</h1>
+    
+    <svg width="960" height="500"></svg>
 
-        <script type="text/javascript" src="./dist/scatterPlot.js"></script>
+        <script type="text/javascript" src="dist/scatterPlot.js"></script>
 </body>
 </html>
